V4.0.1-4 Help documentation updated. Help popup now starts at the top of the page.
Added HTML user-manual docs for all the main pages. Prepping the docs for a more advanced `README.md` on GitHub.

- Made the trash size progress bar functional and update.
- Fixed Trash clean not cleaning all files.

- Mod Manager now sorts remove operatiosn first when doing batch operations.

- Question cards now support being disabled. Edit Game no longer allows changing the Game ID, it is displayed only.